# data_fusion

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: brassy-notes.yaml  lint.yaml
data_fusion/: __init__.py
data_fusion/commandline/: __init__.py  args.py  data_fusion_procflow.py
data_fusion/interface_modules/output_formats/: layered_imagery.py
data_fusion/interface_modules/procflows/: data_fusion.py
data_fusion/plugins/: __init__.py
data_fusion/plugins/modules/: __init__.py
data_fusion/plugins/modules/algorithms/: __init__.py  stitched.py
data_fusion/plugins/modules/output_formatters/: __init__.py  layered_imagery.py
data_fusion/plugins/modules/procflows/: __init__.py  data_fusion.py
data_fusion/plugins/yaml/product_defaults/: Layered-Winds-Horizontal-Adjust.yaml  Layered-Winds-Horizontal-and-Vertical.yaml  Layered-Winds-Vertical-Adjust.yaml  Layered-Winds-Vertical-Default.yaml  Layered.yaml
data_fusion/plugins/yaml/product_inputs/: ahi.yaml  stitched.yaml
data_fusion/plugins/yaml/products/: abi.yaml  (+4 more)
data_fusion/yaml_configs/product_inputs/: layered.yaml  seviri.yaml
data_fusion/yaml_configs/product_params/: Layered.yaml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  template_instructions.rst
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_sources/data_fusion_api/: data_fusion.commandline.rst.txt  data_fusion.plugins.modules.algorithms.rst.txt  data_fusion.plugins.modules.output_formatters.rst.txt  data_fusion.plugins.modules.procflows.rst.txt  data_fusion.plugins.modules.rst.txt  data_fusion.plugins.rst.txt  data_fusion.rst.txt
docs/_sources/releases/: index.rst.txt  v1_10_2.rst.txt  v1_11_0.rst.txt  v1_11_1.rst.txt  v1_7_0.rst.txt  v1_8_1.rst.txt  v1_9_0.rst.txt
docs/archive/: CHANGELOG.md
docs/contact/: aboutus.html  index.html
docs/data_fusion_api/: data_fusion.commandline.html  data_fusion.html  data_fusion.plugins.html  data_fusion.plugins.modules.algorithms.html  data_fusion.plugins.modules.html  data_fusion.plugins.modules.output_formatters.html  data_fusion.plugins.modules.procflows.html  index.html
docs/introduction/: index.html
docs/releases/: index.html  v1_10_0.html  v1_10_0a0.html  v1_10_0a1.html  v1_10_0a2.html  v1_10_2.html  v1_10_3.html  v1_11_0.html  v1_11_1.html  v1_7_0.html  v1_8_0.html  v1_8_1.html  v1_9_0.html
docs/source/data_fusion_api/: index.rst
docs/source/introduction/: index.rst
docs/source/releases/: CHANGELOG.md  HEADER  index.rst  v1_10_0.rst  v1_10_0_dev0.rst  v1_10_0a0.rst  v1_10_0a1.rst  v1_10_0a2.rst  v1_10_2.rst  v1_10_3.rst  v1_11_0.rst  v1_11_1.rst  v1_11_2.rst  v1_11_3.rst  v1_11_3a0.rst  v1_11_5a0.rst  v1_11_6.rst  v1_11_7.rst  v1_11_7a0.rst  v1_12_0.rst  v1_12_0a0.rst  v1_12_2a0.rst  v1_12_3.rst  v1_12_4.rst  v1_13_0.rst  v1_13_0a0.rst  v1_14_0a0.rst  v1_7_0.rst  v1_8_0.rst  v1_8_1.rst  v1_9_0.rst
docs/source/userguide/: index.rst  procflow_guide.rst
docs/userguide/: index.html
geoips_data_fusion/: __init__.py
geoips_data_fusion/commandline/: args.py  data_fusion_procflow.py
my_package/interface_modules/readers/: my_reader.py
my_package/yaml_configs/product_inputs/: @source_name@.yaml
my_package/yaml_configs/product_params/: @Product-Name@.yaml
setup/: config_my_package
tests/: test_all.sh
tests/integration_tests/: test_data_fusion.py
tests/scripts/: @mydatatype@.tc.@product@.imagery_clean.sh  geo.sh  layered.sh  test_config.sh  test_config.yaml
tests/test_pytest/: test_all_yaml_plugins.py
(+52 files in other folders)
